# DSA-Solutions

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  conanfile.py  requirements.txt
.gitlab-ci/: build.gitlab-ci.yml  environment.gitlab-ci.yml  quality-gates.gitlab-ci.yml  tests.gitlab-ci.yml
.gitlab/ci/: build.gitlab-ci.yml  defaults.gitlab-ci.yml  environment.gitlab-ci.yml  quality-gates.gitlab-ci.yml  tests.gitlab-ci.yml
.gitlab/scripts/: codacy_send_results.sh
ArrayAndString/: implement_str_str.cpp  longest_common_prefix.cpp
data-structures/: Problems.md
data-structures/array/: add_binary.cpp  diagonal_traverse.cpp  duplicate_zeros.cpp  find_numbers_with_even_number_of_digits.cpp  find_pivot_index.cpp  implement_str_str.cpp  largest_number_at_least_twice_of_others.cpp  max_consecutive_ones.cpp  plus_one.cpp  reverse_string.cpp  spiral_matrix.cpp  squares_of_a_sorted_array.cpp
data-structures/linked-list/: doubly_linked_list.cpp  linked_list_cycle.cpp  linked_list_cycle_II.cpp  singly_linked_list.cpp  singly_list_node.cpp  singly_list_node.hpp
data-structures/queue/: circular_queue.cpp
data-structures/stack/: daily_temperatures.cpp  min_stack.cpp  valid_parentheses.cpp
environment/: Dockerfile  requirements.txt
environment/scripts/: clean_build_project.sh  clean_compile_commands_database.sh  setup_compile_commands_database.sh
search-algorithms/: missing_number.cpp
search-algorithms/binary-search/: binary_search.cpp  guess_number_higher_or_lower.cpp  search_in_rotated_sorted_array.cpp  sqrt.cpp
search-algorithms/linear-search/: linear_search.cpp
sources/: CMakeLists.txt
sources/data-structures/array/: add_binary.cpp  diagonal_traverse.cpp  duplicate_zeros.cpp  find_numbers_with_even_number_of_digits.cpp  find_pivot_index.cpp  implements_str_str.cpp  largest_number_at_least_twice_of_others.cpp  longest_common_prefix.cpp  max_consecutive_ones.cpp  pascal_triangle.cpp  plus_one.cpp  reverse_string.cpp  spiral_matrix.cpp  squares_of_a_sorted_array.cpp
sources/data-structures/binary-tree/: inorder_traversal.cpp  level_order_traversal.cpp  postorder_traversal.cpp  preorder_traversal.cpp  tree_node.cpp
sources/data-structures/linked-list/: doubly_linked_list.cpp  linked_list_cycle.cpp  linked_list_cycle_II.cpp  remove_nth_node_from_end_of_list.cpp  singly_linked_list.cpp  singly_list_node.cpp
sources/data-structures/queue/: circular_queue.cpp
sources/data-structures/stack/: daily_temperatures.cpp  min_stack.cpp  valid_parentheses.cpp
sources/search-algorithms/: Problems.md  missing_number.cpp
sources/search-algorithms/binary-search/: binary_search.cpp  guess_number_higher_or_lower.cpp  search_in_rotated_sorted_array.cpp  sqrt.cpp
sources/search-algorithms/linear-search/: linear_search.cpp
sources/sorting-algorithms/: merge_intervals.cpp
tests/: CMakeLists.txt  main_test.cpp
tests/data-structures/array/: add_binary_test.cpp  diagonal_traverse_test.cpp  duplicate_zeros_test.cpp  find_numbers_with_even_number_of_digits_test.cpp  find_pivot_index_test.cpp  implements_str_str_test.cpp  largest_number_at_least_twice_of_others_test.cpp  longest_common_prefix_test.cpp  max_consecutive_ones_test.cpp  pascal_triangle_test.cpp  plus_one_test.cpp  reverse_string_test.cpp  spiral_matrix_test.cpp  squares_of_a_sorted_array_test.cpp
tests/data-structures/binary-tree/: inorder_traversal_test.cpp  preorder_traversal_test.cpp  traversal_test.cpp
tests/data-structures/linked-list/: doubly_linked_list_test.cpp  linked_list_cycle_II_test.cpp  linked_list_cycle_test.cpp  remove_nth_node_from_end_of_list_test.cpp  singly_linked_list_test.cpp
tests/data-structures/queue/: circular_queue_test.cpp
tests/data-structures/stack/: daily_temperatures_test.cpp  min_stack_test.cpp  valid_parentheses_test.cpp
tests/search-algorithms/: missing_number_test.cpp
tests/search-algorithms/binary-search/: binary_search_test.cpp  guess_number_higher_or_lower_test.cpp  search_in_rotated_sorted_array_test.cpp  sqrt_test.cpp
tests/search-algorithms/linear-search/: linear_search_test.cpp
tests/sorting-algorithms/: merge_intervals_test.cpp
